[package]
name = "sallybf-fuse"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
fuser = "0.15.0"
log = "0.4.17"
sallybf = {path = "../lib"}
byteorder = "1.4.3"
rust-lzo = "0.6.2"
